[project]
name = "quiz-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"

packages = ["src"]

dependencies = [
    "fastapi>=0.122.0",
    "httpx>=0.28.1",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "ruff>=0.14.5",
]
